--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -171,7 +171,7 @@
             data.users.forEach(user => {
               const div = document.createElement("div");
               div.className = "user";
-              // Change "openDmChatModal" to "startDM" for redirection.
+              // When Message is clicked, start a DM (redirect to chat.html with DM room query)
               div.innerHTML = `<strong>${user.username}</strong> (${user.full_name})
                                 <button onclick="startDM('${user.username}')">Message</button>`;
               resultsContainer.appendChild(div);
@@ -189,7 +189,7 @@
       return "dm-" + sorted.join("-");
     }
 
-    // Redirect to chat.html with the DM room as a query parameter.
+    // When the Message button is clicked, redirect to chat.html with the DM room query parameter.
     function startDM(recipient) {
       if (!username) {
         alert("User not logged in!");
@@ -224,7 +224,7 @@
     }
 
     function openInboxRoom(room) {
-      window.location.href = "chat.html?room=" + encodeURIComponent(room);
+      window.location.href = "index.html?room=" + encodeURIComponent(room);
       delete inboxNotifications[room];
       updateInboxUI();
     }
