--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -138,8 +138,11 @@
     // Inbox notifications: key is room name, value is count.
     let inboxNotifications = {};
 
-    // On dashboard load, check session.
+    // On dashboard load, remove any query parameters to avoid accidental DM popup
     window.onload = function() {
+      if(window.location.search) {
+        window.history.replaceState({}, document.title, window.location.pathname);
+      }
       fetch("/me")
         .then(response => response.json())
         .then(data => {
@@ -171,7 +174,7 @@
             data.users.forEach(user => {
               const div = document.createElement("div");
               div.className = "user";
-              // When Message is clicked, start a DM (redirect to chat.html with DM room query)
+              // When Message is clicked, generate DM room and redirect to chat.html.
               div.innerHTML = `<strong>${user.username}</strong> (${user.full_name})
                                 <button onclick="startDM('${user.username}')">Message</button>`;
               resultsContainer.appendChild(div);
@@ -189,7 +192,7 @@
       return "dm-" + sorted.join("-");
     }
 
-    // When the Message button is clicked, redirect to chat.html with the DM room query parameter.
+    // When the Message button is clicked, generate DM room name and redirect to chat.html.
     function startDM(recipient) {
       if (!username) {
         alert("User not logged in!");
