--- a/public/index.html
+++ b/public/index.html
@@ -337,9 +337,10 @@
           .then(response => response.json())
           .then(data => {
             if (data.message === "Login successful!") {
-              // Save username globally and redirect to dashboard
               username = data.user.username;
-              window.location.href = "dashboard.html";
+              document.getElementById("authContainer").style.display = "none";
+              document.getElementById("roomContainer").style.display = "block";
+              fetchRooms();
             } else {
               alert(data.message);
             }
@@ -349,7 +350,6 @@
         alert("Please fill in all fields.");
       }
     }
-    
 
     function registerUser() {
       const fullName = document.getElementById("signupFullName").value.trim();
