--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
       margin: 0;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       background: #f7f7f7;
+      background-image: url("41919.jpg");
     }
     /* Auth & Dashboard */
     .background, .container {
