--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,6 @@
       margin: 0;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       background: #f7f7f7;
-      background-image: url("41919.jpg");
     }
     /* Auth & Dashboard */
     .background, .container {
@@ -20,6 +19,7 @@
       max-width: 800px;
       margin: 40px auto;
       padding: 20px;
+      background: #fff;
       border-radius: 10px;
       box-shadow: 0 4px 12px rgba(0,0,0,0.1);
       text-align: center;
