--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -59,7 +59,8 @@
       <h2>Chat Rooms</h2>
       <p>Join an existing room or create a new one.</p>
       <!-- This button redirects to the public chat interface (index.html) -->
-      <a href="index.html" class="btn">Enter Public Chat</a>
+      <a href="index.html" class="btn">Enter Public Chat</a><br>
+      <a href="profile.html" class="btn">Change Profile</a>
     </div>
     <button class="btn" onclick="logoutUser()">Logout</button>
   </div>
