--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Chat App</title>
+  <title>Chatify</title>
   <link rel="stylesheet" href="style.css" />
   <!-- Additional styling for the join room modal -->
   <style>
