--- a/public/profile.html
+++ b/public/profile.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Your Profile - Chat App</title>
+  <title>Your Profile - Chatify</title>
   <link rel="stylesheet" href="style.css" />
   <style>
     /* Advanced Profile Page Styles */
