--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -61,7 +61,7 @@
         <!-- This button redirects to the public chat interface (index.html) -->
         <a href="index.html" class="btn">Enter Public Chat</a>
       </div>
-      <div><a href="profile.html" class="btn">Change Profile</a></div>
+      <div><a href="profile.html" class="btn">Change Profile</a></div><br>
       <div><button class="btn" onclick="logoutUser()">Logout</button></div>
     </div>
     
