--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Chatify</title>
   <link rel="stylesheet" href="style.css" />
+  <link rel="icon" href="uploads/Screenshot 2025-03-14 145728.png" type="icon">
   <!-- Additional styling for the join room modal -->
   <style>
     /* General Styles */
